fix(chat): autocomplete list aligns properly with the @ symbol again

--- a/public/css/game-pane.styl
+++ b/public/css/game-pane.styl
@@ -7,6 +7,7 @@
 
 .chat-form
   margin-bottom: 10px
+  position: relative
 
   textarea
     margin-bottom: 5px
